test/main/com/ocaml/sdk/output/errors/samples/unbound/rec.ml
(*
Error: Unbound value x Hint: If this is a recursive definition, you should add the 'rec' keyword on line 1
*)
let x y = x y